--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>us.bzsf.temper</groupId>
+    <groupId>us.bzsf.weatherreader</groupId>
     <artifactId>app</artifactId>
     <version>1.0</version>
     <properties>
@@ -50,7 +50,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>us.bzsf.temper.App</mainClass>
+                            <mainClass>us.bzsf.weatherreader.App</mainClass>
                         </configuration>
                     </execution>
                     <execution>
@@ -61,7 +61,7 @@
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                             </options>
-                            <mainClass>us.bzsf.temper.App</mainClass>
+                            <mainClass>us.bzsf.weatherreader.App</mainClass>
                         </configuration>
                     </execution>
                     <execution>
@@ -71,7 +71,7 @@
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                             </options>
-                            <mainClass>us.bzsf.temper.App</mainClass>
+                            <mainClass>us.bzsf.weatherreader.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
